# hfl

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  readme.md
include/: curried.hpp  function_trait.hpp  hfl_concept.hpp  memo.hpp  optional.hpp  optional_function.hpp  result.hpp  result_function.hpp  rs_common.hpp  rs_option.hpp  rs_result.hpp  timer.hpp
test/: curried_test.cpp  memo_test.cpp  optional_applicative_test.cpp  optional_fmap_test.cpp  optional_mbind_test.cpp  result_applicative_test.cpp  result_fmap_test.cpp  result_mbind_test.cpp  result_test.cpp  rs_option_test.cpp  rs_result_test.cpp
